@@ -1,5 +1,8 @@
 2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* nnimap.el (nnimap-update-info): None of the articles below the active
+	low-water mark exist.
+
 	* dgnushack.el: Get rid of XEmacs compilation warning.
 
 	* gnus-msg.el (gnus-summary-cancel-article): See what From header we
